# protoc-gen-validate-fx

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cmd/protoc-gen-validate-cpp/: BUILD  main.go
cmd/protoc-gen-validate-go/: BUILD  main.go
cmd/protoc-gen-validate-java/: BUILD  main.go
flatten/: flatten.go
flatten/meta/: flatten.pb.go  flatten.proto
module/: BUILD  checker.go  extend.field.go  extend.file.go  extend.msg.go  validate.go
templates/: BUILD.bazel  pkg.go
templates/cc/: BUILD.bazel  register.go
templates/ccnop/: BUILD.bazel  register.go
templates/go/: BUILD.bazel  register.go
templates/goshared/: BUILD.bazel  msg.go  register.go
templates/java/: BUILD.bazel  register.go
templates/shared/: BUILD.bazel  context.go  disabled.go  well_known.go
tests/: go.mod  test.data
tests/harness/: BUILD  harness.proto
tests/harness/cases/: BUILD  bool.proto  bytes.proto  enums.proto  filename-with-dash.proto  kitchen_sink.proto  maps.proto  messages.proto  numbers.proto  oneofs.proto  repeated.proto  strings.proto  wkt_any.proto  wkt_duration.proto  wkt_nested.proto  wkt_timestamp.proto  wkt_wrappers.proto
tests/harness/cases/other_package/: BUILD  embed.proto
tests/harness/cases/sort/: BUILD  sort.proto
tests/harness/cases/subdirectory/: in_subdirectory.proto
tests/harness/cases/yet_another_package/: BUILD  embed.proto
tests/harness/executor/: BUILD  cases.go  harness.go  worker.go
tests/harness/go/main/: BUILD  harness.go
validate/: BUILD  validate.proto
